# Korean_Edu_Voca_Check

./: .gitignore  README.md  snu3a_level_mapped_vocabulary.xlsx
.github/workflows/: release.yml
kvocab-guard/: KVocabGuard.iss  README.md  _inspect_2b.py  _render_2b.py  app.py  pyproject.toml  react_app.py  run.bat  run.ps1  run.py
kvocab-guard/data/seed/: snu2a_level_mapped_vocabulary.xlsx  vocabulary_database.xlsx
kvocab-guard/docs/: ANALYZER_HANDOFF_FOR_CHATGPT.md
kvocab-guard/kvocab-ui/: index.html  package-lock.json  package.json
kvocab-guard/kvocab-ui/src/: App.css  App.tsx  bridge.ts  mockData.ts  types.ts
kvocab-guard/kvocab-ui/src-tauri/: Cargo.toml  tauri.conf.json
kvocab-guard/release/: complete.txt  info.txt
kvocab-guard/scripts/: rebuild_icon.py  sync_version.py
kvocab-guard/src/kvocab_core/: __init__.py  allowlist.py  analyzer.py  analyzer_cli.py  api.py  cli_server.py  config.py  database.py  dictionary.py  equivalent_forms.py  level_map_data.py  matching.py  models.py  morph.py  normalization.py  runtime_paths.py  schemas.py  seed.py  status_labels.py  token_units.py  unknown_risk.py
kvocab-guard/src/kvocab_desktop/: __init__.py  app.py  icons.py  layout_metrics.py  main_window.py  prefs.py  react_app.py  style.py  update_manager.py
kvocab-guard/tests/: test_allowlist.py  test_analyze_panel_input.py  test_analyzer_basic.py  test_api.py  test_dictionary.py  test_document_extractors.py  test_matching.py  test_normalization.py  test_prefs.py  test_results_panel.py  test_target_selector.py  test_unit_mapping.py  test_unknown_risk.py
(+36 files in other folders)
