[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvocab-guard"
version = "0.0.0"
description = "Korean textbook vocabulary checker for SNU Korean and beyond"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
    "pydantic>=2.0",
    "kiwipiepy>=0.17",
    "PyMuPDF>=1.24",
    "PySide6>=6.6,<6.10",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "olefile>=0.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[project.scripts]
kvocab-guard = "kvocab_desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kvocab_desktop" = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
